# libigl-example-project

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  collapse_edges.cpp  dog.ply  knightloop.off  main copy.cpp  main.cpp  taubin.cpp  taubin.h  wei_shengyang_244.cpp  wt.cpp  wt.h
.github/workflows/: continuous.yml
cmake/: .FindNANOGUI.cmake.un~  FindANTTWEAKBAR.cmake  FindEMBREE.cmake  FindGLEW.cmake  FindLIBIGL.cmake  FindNANOGUI.cmake  FindTETGEN.cmake  Findlibigl.cmake  libigl.cmake
